# dftxt

./: README.md  data_types.md  example.md  pyproject.toml
.github/workflows/: checks.yaml  publish.yaml
dftxt/: __init__.py
dftxt/_cast/: __init__.py  _categorical.py  _common.py  _pandas.py  _polars.py
dftxt/_io/: __init__.py  _cast.py  _markdown.py  _modifiers.py  _read.py  _write.py
dftxt/_modifiers/: __init__.py  _parse.py  _serialize.py  _types.py  _utils.py
dftxt/_parsing/: __init__.py  _blocks.py  _types.py
dftxt/_transforms/_insertion/: _columns.py
dftxt/cli/: __init__.py
dftxt/tests/: __init__.py
dftxt/tests/_examples/multiple_frames_filtering/: frames.dftxt  test_multiple_frames_filtering.py
dftxt/tests/_examples/multiple_frames_named/: frames.dftxt  test_multiple_frames_named.py
dftxt/tests/_examples/multiple_frames_unnamed/: frames.dftxt  test_multiple_frames_unnamed.py
dftxt/tests/_io/: test_io_scenarios.py
dftxt/tests/_io/_markdown/: test_markdown.py
dftxt/tests/_io/_modifiers/: test_modifier_scenarios.py
dftxt/tests/_io/_modifiers/scenarios/: basic.json
dftxt/tests/_io/_read/: test_find_columns.py
dftxt/tests/_io/scenarios/: dataset_expected.py  dataset_scenario_populator.py
dftxt/tests/_io/scenarios/anagrams/: expected.py  scenario.json  source.dftxt
dftxt/tests/_io/scenarios/anscombe/: scenario.json  source.dftxt
dftxt/tests/_io/scenarios/attention/: scenario.json  source.dftxt
dftxt/tests/_io/scenarios/brain_networks/: scenario.json  source.dftxt
dftxt/tests/_io/scenarios/car_crashes/: scenario.json  source.dftxt
dftxt/tests/_io/scenarios/comments/: expected.dftxt  expected.py  expected_polars.dftxt  scenario.json  source.dftxt
dftxt/tests/_io/scenarios/diamonds/: expected_polars.dftxt  scenario.json  source.dftxt
dftxt/tests/_modifiers/: test_modifier_scenarios.py
dftxt/tests/_modifiers/scenarios/: empty.json
dftxt/tests/_parsing/: test_find_columns.py
(+58 files in other folders)
